fix: fab placement issue fixed and updated

--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -468,7 +468,7 @@ Icons can be used inside Fab component.
           borderColor='$trueGray300'
           rounded='$lg'
           borderWidth='$1'
-          py='$4'
+          pt='$4'
           bg='$white'
           sx={{
             "@base": {
@@ -513,7 +513,7 @@ Icons can be used inside Fab component.
               <Checkbox.Label>Ask challenges and discuss.</Checkbox.Label>
             </Checkbox>
           </VStack>
-          <Fab bg="$black" p='$3' h='$9' w='$9' position="relative" bottom='1%' left='50%'>
+          <Fab bg="$black" p='$3' h='$9' w='$9' position='relative' placement="bottom-center">
             <AddIcon/>
           </Fab>
         </Box>
