fix: changed state to false

--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -739,7 +739,7 @@ The Examples section provides visual representations of the different variants o
     metaData={{
       code: `
       function App() {
-        const [showModal, setShowModal] = useState(true);
+        const [showModal, setShowModal] = useState(false);
         return(
           <Wrapper>
             <Center h={500}>
