fix: updated BGcolour

--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -198,7 +198,7 @@ It also allows for different variants such as `solid`, `accent` and `outline`.
     showArgsController={true}
     metaData={{
       code: `
-        <Alert mx='$2.5' {...props} bg='#BBF7D0' borderColor='#15803D'>
+        <Alert mx='$2.5' {...props}>
           <Alert.Icon h='$6' w='$6' position='relative' bottom='$6'>
             <Icon as={CheckCircleIcon} h='$5' w='$5'/>
           </Alert.Icon>
